CHANGES
*******

0.3 (unreleased)
================

- Updated the test suite to work with Morepath 0.15.


0.2 (2016-01-23)
================

- The ``MOREPATH_TEMPLATE_AUTO_RELOAD`` environment variable may now be used
  to control the auto reloading behavior of Chameleon.

  See README.rst for details.

  Fixes Issue #1: https://github.com/morepath/more.chameleon/issues/1


0.1 (2015-04-09)
================

- Initial public release.